--- a/class-00/lab-b/starter-code/index.html
+++ b/class-00/lab-b/starter-code/index.html
@@ -8,6 +8,6 @@
     <main>
       <p>Open the developer console to see your output</p>
     </main>
-    <script src="./app.js"></script>
+    <script src="lab/app.js"></script>
   </body>
 </html>
