--- a/class-00/lab-c/starter-code/index.html
+++ b/class-00/lab-c/starter-code/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Choco Pizza</title>
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="lab/reset.css">
+  <link rel="stylesheet" href="lab/base.css">
+  <link rel="stylesheet" href="lab/layout.css">
+  <link rel="stylesheet" href="lab/modules.css">
 </head>
 
 <body>
